fix(modal-checkout): z-index when used w/ Campaigns

--- a/src/blocks/donate/styles/view.scss
+++ b/src/blocks/donate/styles/view.scss
@@ -42,7 +42,7 @@
 	width: 100%;
 	height: 100%;
 	background: rgba( 0, 0, 0, 0.5 );
-	z-index: 9999;
+	z-index: 99999;
 	&__content {
 		position: absolute;
 		top: 50%;
